basic-test-pipe/cdp-csdp-june-charizard-pipeline-test.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdp-csdp-june-charizard-pipeline-test
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webhooks/csdp-june-charizard/flasksensor
            backend:
              service:
                name: flasksensor-eventsource-svc
                port:
                  number: 80
            pathType: Prefix
      host: charizard-csdp.support.cf-cd.com
